@@ -825,7 +825,7 @@ sub run_override {
 	if (defined $override_type) {
 		if ($has_explicit_target) {
 			foreach my $package (@{$packages}) {
-				my $isall=package_arch($package) eq 'all';
+				my $isall=package_is_arch_all($package);
 				if (($override_type eq 'indep' && $isall) ||
 					($override_type eq 'arch' && !$isall)) {
 					push @todo, $package;
