@@ -12,6 +12,12 @@ debhelper (10.5) UNRELEASED; urgency=medium
   * Dh_Lib: Re-add warning + exit 0 for the -i/-a shortcut that was
     added in 10.3.  (Closes: #863961)
 
+  [ Michael Stapelberg ]
+  * Dh_Getopt: Provide a more detailed error message when there are
+    no buildable packages caused by architecture restrictions.
+    (Closes: #858467)
+  * Dh_Lib: Split package_arch($package) into three distinct functions.
+
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Jun 2017 11:09:56 +0000
 
 debhelper (10.4) experimental; urgency=medium
